# gestor-eventos-api

./: .env  README.md  alembic.ini  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: eb400280f7db_initial.py  f2eea9b069f0_create_attendance_table.py
app/: main.py
app/api/: event.py  example.py  user.py
app/core/: auth.py  config.py  db.py  security.py
app/models/: attendance.py  event.py  example.py  user.py
app/repositories/: attendance_repository.py  event_repository.py  example_repository.py  user_repository.py
app/schemas/: event.py  example.py  user.py
app/services/: event_service.py  example_service.py  user_service.py
tests/: test_attendance_service.py  test_event_service.py  test_user_service.py
